tests/fail/DivAssign.java
package fail;

public class DivAssign {
	
	public static void main(String[] args) {
		int t = 3;
		t /= "a";
	}	
}
